--- a/Source/Asteroids/GameConfig.INI
+++ b/Source/Asteroids/GameConfig.INI
@@ -6,10 +6,17 @@ booom =  Resources\audio\booom.wav
 asteroid =  Resources\graphics\aster.bmp
 smallasteroid =  Resources\graphics\smallasteroid.png
 
+
+[TextureResource]
+bullet = Resources\graphics\bullet.png
+rocket = Resources\graphics\rocket.png
+
 [ImageSequenceResource]
 girl =  Resources\graphics\girl.png
 cat =  Resources\graphics\cat.png
 fire =  Resources\graphics\fire.png
+spaceship = Resources\graphics\spaceship.png
+spaceshipFlickering = Resources\graphics\spaceshipFlickering.png
 
 [ImageSequenceResource.girl]
 Width =  110
@@ -30,6 +37,19 @@ Height =  192
 FrameCount =  12
 AnimationTime =  600
 
+
+[ImageSequenceResource.spaceship]
+Width =  99
+Height =  154
+FrameCount =  4
+AnimationTime =  500
+
+[ImageSequenceResource.spaceshipFlickering]
+Width =  99
+Height =  154
+FrameCount =  8
+AnimationTime =  1000
+
 [Input]
 0 = 73, 22
 1 = 74, 18
@@ -38,4 +58,5 @@ AnimationTime =  600
 4 = 36
 5 = 58
 6 = 57
-7 = 54
+7 = 39
+8 = 54
