--- a/Source/PhysicsTest/PhysicsTest.vcxproj
+++ b/Source/PhysicsTest/PhysicsTest.vcxproj
@@ -85,6 +85,9 @@
   <ItemGroup>
     <ClCompile Include="Physics.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CollisionEventForTest.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
