--- a/Source/Spaceship/Spaceship.vcxproj.filters
+++ b/Source/Spaceship/Spaceship.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="BulletManagerEvents.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SpaceshipRespawnEvent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameOverEvent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Spaceship.cpp">
