--- a/Source/ResourcesTest/Config.INI
+++ b/Source/ResourcesTest/Config.INI
@@ -2,6 +2,9 @@
 piupiu =  Resources\audio\piupiu.wav
 booom =  Resources\audio\booom.wav
 
+[TextureResource]
+asteroidTexture =  Resources\graphics\asteroid.png
+
 [PictureResource]
 asteroid =  Resources\graphics\aster.bmp
 smallasteroid =  Resources\graphics\smallasteroid.png
